--- a/ProcessReporterWin/MainPage.xaml
+++ b/ProcessReporterWin/MainPage.xaml
@@ -7,6 +7,7 @@
     <StackLayout>
         <tb:TaskbarIcon
             x:Name="ProcessReporter"
+            ToolTipText="ProcessReporter"
             LeftClickCommand="{Binding ShowWindowCommand}"
             NoLeftClickDelay="True"
             >
