--- a/ShiroProcessReporter/ShiroProcessReporter/App.xaml
+++ b/ShiroProcessReporter/ShiroProcessReporter/App.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Application
-    x:Class="App1.App"
+    x:Class="ShiroProcessReporter.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:App1">
+    xmlns:local="using:ShiroProcessReporter">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
